Add glad.h and khrplatform.h to linguist-vendored

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
 native/glad/glad.c linguist-vendored
 native/stb_image.h linguist-vendored
+native/glad/glad.h linguist-vendored
+native/KHR/khrplatform.h linguist-vendored
 
 # Force GLSL and Shell to show up even if they are small percentages
 *.glsl linguist-detectable=true
